k8s-manifests/apod-deployment.yaml
# this manifest creates pods of the APOD API application. It specifies the number of replicas, the container image to use, and the resource requests and limits for CPU and memory. The deployment also includes labels for identifying the pods and a selector for matching the pods with the corresponding service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apod-api
  namespace: default
  labels:
    app: apod-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apod-api
  template:
    metadata:
      labels:
        app: apod-api
    spec:
      containers:
        - name: apod-api
          image: node:18-alpine
          command: ["sh", "-c"]
          args:
            - |
              [...]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
