k8s-manifests/vpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard-ui-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vpn.andrei-test.lendo.dev
    secretName: vpn-tls-cert
  rules:
  - host: vpn.andrei-test.lendo.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wireguard-ui-service # Убедись, что это имя твоего K8s Service для UI WireGuard
            port:
              number: 51821 # Убедись, что это порт веб-интерфейса
